Autocorrection et ajout de commentaires

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <form>
             <p><label for="age">Votre âge : </label><input type="text" id="age" name="age"/></p>
-            <button id="submit" name="submit" onclick="majeur()">Valider</button>
+            <button id="submit" name="submit" onclick="display()">Valider</button>
         </form>
     </body>
 </html>
