--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
         <title>Exercice_8</title>
         <meta charset="UTF-8" />
-        <script type="text/javascript" src="main.js"></script>
     </head>
     <body>
         <form>
             <p><label for="age">Votre âge : </label><input type="text" id="age" name="age"/></p>
             <button id="submit" name="submit" onclick="display()">Valider</button>
         </form>
+        <!-- Scripts -->
+        <script type="text/javascript" src="main.js"></script>
     </body>
 </html>
